# terms

./: .envrc  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  book.toml  build.rs  flake.nix  i18n.toml  meson.build  meson_options.txt  rustfmt.toml  terms.doap
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml
build-aux/: com.github.vhdirk.Terms.Devel.json  com.github.vhdirk.Terms.json  dist-vendor.sh  io.github.vhdirk.Terms.Devel.json  io.github.vhdirk.Terms.Devel.yml  io.github.vhdirk.Terms.json  io.github.vhdirk.Terms.yaml  io.github.vhdirk.Terms.yml
build-aux/vte/: 0001-Add-sequences-and-signals-for-desktop-notification.patch  0001-add-notification-and-shell-precmd-preexec.patch  0002-vte.sh-Emit-OSC-777-from-PROMPT_COMMAND.patch  0003-Test-the-notification-received-signal.patch  0004-Support-preexec-notifications-from-an-interactive-sh.patch  0005-Test-the-shell-preexec-signal.patch  0006-Support-precmd-notifications-from-an-interactive-she.patch  0007-Test-the-shell-precmd-signal.patch  0008-Support-tracking-the-active-container-inside-the-ter.patch  0009-expose-notification-shellcmd-containers-to-GTK-4.patch  Allow-background-color-and-color-on-VteTerminal-widgets-t.patch  Sixel.patch  widget-a11y-Add-missing-text-changes-on-scrolling-with-mo.patch
data/: com.github.vhdirk.Terms.desktop.in.in  com.github.vhdirk.Terms.gschema.xml.in  com.github.vhdirk.Terms.metainfo.xml.in.in  io.github.vhdirk.Terms.desktop.in.in  io.github.vhdirk.Terms.gschema.xml.in  io.github.vhdirk.Terms.metainfo.xml.in.in  io.github.vhdirk.Terms.service.in  meson.build  reset.sh
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: header_bar copy.ui  header_bar.ui  help_overlay.ui  session.ui  window.ui
data/themes/: Adwaita Dark.yml  Adwaita Light.yml  Base16 Twilight Dark.yml  Dracula Light.yml  Material Oceanic.yml  Orchis.yml  Tango Dark.yml  Yaru.yml
docs/: SUMMARY.md  intro.md  io.github.vhdirk.Terms.flatpakrepo
i18n/: README.md  meson.build  terms.pot
i18n/en/: terms.ftl
i18n/nl/: terms.po
po/: POTFILES.in  POTFILES.skip  README.md  meson.build  terms.pot
src/: application.rs  config.rs.in  error.rs  i18n.rs  main.rs  meson.build  pcre2.rs  settings.rs
src/app/: mod copy 2.rs  mod.rs  util.rs
src/app/components/: about_dialog.rs  app_header.rs  mod.rs  terminal.rs  terminal_tab.rs
src/app/config/: actions.rs  appearance.rs  info.rs  info.rs.in  meson.build  mod.rs  resources.rs  setup.rs
src/components/: header_bar.rs  mod.rs  search_toolbar.rs  session.rs  terminal.rs  terminal_panel.rs  window.rs  workspace.rs
src/components/header_bar/: header_bar.rs  header_bar.ui  mod.rs
src/components/preferences_window/: imp.rs  mod.rs  preferences_window.rs  preferences_window.ui
src/components/process_manager/: imp.rs  mod.rs  process_manager.rs
src/components/search_toolbar/: imp.rs  mod.rs  search_toolbar.rs  search_toolbar.ui
src/components/session/: mod.rs  session.rs
src/components/shortcut_dialog/: imp.rs  mod.rs  shortcut_dialog.rs  shortcut_dialog.ui
src/components/shortcut_row/: imp.rs  mod.rs  shortcut_row.rs  shortcut_row.ui
src/components/shortcuts_preferences_page/: imp.rs  mod.rs  shortcuts_preferences_page.rs  shortcuts_preferences_page.ui
src/components/style_switcher/: style_switcher.rs  style_switcher.ui
src/components/terminal/: constants.rs  flatpak_spawn.rs  imp.rs  mod.rs  spawn.rs  terminal.rs  terminal.ui
src/components/terminal_frame/: mod.rs  terminal_frame.rs  terminal_frame.ui
src/components/terminal_panel/: mod.rs  terminal_panel.rs  terminal_panel.ui
src/components/terminal_preferences_page/: imp.rs  mod.rs  terminal_preferences_page.rs  terminal_preferences_page.ui
src/components/terminal_tab/: imp.rs  mod.rs  terminal_tab.rs  terminal_tab.ui
src/components/theme_thumbnail/: imp.rs  mod.rs  theme_thumbnail.rs  thumbnail_paintable.rs
src/components/title_dialog/: title_dialog.ui
src/components/window/: imp.rs  mod.rs  window.rs  window.ui
src/components/workspace/: mod.rs  workspace.rs  workspace.ui
src/components/zoom_controls/: mod.rs  zoom_controls.rs  zoom_controls.ui
src/lib/: libc_util.rs  toolbox.rs  util.rs
src/services/: mod.rs  sandbox.rs  settings.rs
src/services/theme_provider/: mod.rs  theme.rs  theme_provider.rs
src/theme_provider/: imp.rs  mod.rs  theme.rs  theme_provider.rs
src/tile/: README.md  mod.rs
src/tile/style_switcher/: mod.rs  style_switcher.rs  style_switcher.ui
src/tile/tile/: mod.rs  tile.rs
src/tile/tile_view/: mod.rs  tile_view.rs
src/tile/zoom_controls/: mod.rs  zoom_controls.rs  zoom_controls.ui
src/twl/: README.md  bin.rs  bin_imp.rs  fading_label.rs  fading_label_imp.rs  mod.rs  pack_box.rs  pack_box_imp.rs  paned.rs  paned_imp.rs  panel.rs  panel_grid.rs  panel_grid_imp.rs  panel_header.rs  panel_header.ui  panel_header_imp.rs  panel_imp.rs  resizer.rs  resizer_imp.rs  split_paned.rs  style_switcher.rs  style_switcher.ui  style_switcher_imp.rs  tile_grid.rs  tile_grid_imp.rs  utils.rs  zoom_controls.rs  zoom_controls.ui  zoom_controls_imp.rs
src/twl/paned/: mod.rs  paned.rs
src/twl/style_switcher/: style_switcher.ui
src/twl/tile/: mod.rs  tile.rs
src/twl/tile_grid/: mod.rs  tile_grid.rs
src/twl/zoom_controls/: zoom_controls.rs
src/util/: envmap.rs  mod.rs
src/utils/: constants.rs
