[package]
name = "terms"
version = "0.1.0"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
edition = "2021"
default-run = "terms"

[[bin]]
name = "terms"
path = "./src/main.rs"

[[bin]]
name = "terms-toolbox"
path = "./src/bin/toolbox.rs"

[lib]
name = "terms_util"
path = "src/lib/util.rs"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2.0"
serde = { version = "1.0.196", features = ["derive"] }
once_cell = "1.13.0"
async-channel = "2.1.1"

glib = { version = "^0.18", features = ["v2_74"]}
gio = { version = "^0.18" }
pango = { version = "^0.18" }
gdk = { package = "gdk4", version = "^0.7", features = ["v4_12"] }
gtk = { package = "gtk4", version = "^0.7", features = ["v4_12"] }

adw = { package = "libadwaita", version = "0.5", features = ["v1_4"] }
# panel = { package = "libpanel", version = "0.3" }
vte = { git = "https://gitlab.gnome.org/vhdirk/vte4-rs", package = "vte4", branch = "0.7", version = "0.7", features = [
    "v0_72",
] }
rsvg = { package = "librsvg", version = "2.57" }
ashpd = { version = "0.6.8" }
gsettings-macro = "0.1.20"

async-std = "1.12.0"
constcat = "0.4.1"
serde_with = "3.5.1"
ref_thread_local = "0.1.1"
serde_json = "1.0.113"
rand = "0.8.5"
elementtree = "1.2.3"
serde_yaml = "0.9.31"
itertools = "0.12.1"
bitflags = "2.4.2"
async-trait = "0.1.77"
clap = { version = "4.4.18", features = ["derive"] }
libc = "0.2.153"
thiserror = "1.0.56"
anyhow = "1.0.79"
zbus = "3.14.1"

[build-dependencies]
glib-build-tools = "0.18.0"

[patch.crates-io]
gsettings-macro = {git = "https://github.com/vhdirk/gsettings-macro.git", branch="multiple-schemas"}


