[package]
name = "terms"
version = "0.1.0"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
edition = "2021"
default-run = "terms"

[[bin]]
name = "terms"
path = "./src/main.rs"

[[bin]]
name = "terms-toolbox"
path = "./src/bin/toolbox.rs"

[lib]
name = "terms_util"
path = "src/lib/util.rs"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.13.0"
async-channel = "2.2.0"

glib = { version = "^0.19", features = ["v2_74"] }
gio = { version = "^0.19.2" }
pango = { version = "^0.19.2" }
gdk = { package = "gdk4", version = "^0.8", features = ["v4_12"] }
gtk = { package = "gtk4", version = "^0.8", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.6", features = ["v1_4"] }
vte = { package = "vte4", version = "0.7.1", features = ["v0_70"]}
rsvg = { package = "librsvg", version = "2.58.0-beta.1" }
ashpd = { version = "0.8.0" }
gsettings-macro = "0.2.0"

async-std = "1.12.0"
constcat = "0.5.0"
serde_with = "3.7.0"
ref_thread_local = "0.1.1"
serde_json = "1.0.114"
rand = "0.8.5"
elementtree = "1.2.3"
serde_yaml = "0.9.32"
itertools = "0.12.1"
bitflags = "2.4.2"
async-trait = "0.1.77"
clap = { version = "4.5.2", features = ["derive"] }
libc = "0.2.153"
thiserror = "1.0.57"
anyhow = "1.0.81"
zbus = "4.1.2"
num-traits = "0.2.18"
approx = "0.5.1"
nix = { version = "0.28", features = ["term", "aio", "fs", "process"] }

[build-dependencies]
glib-build-tools = "0.19.0"
git-version = "0.3.9"

[patch.crates-io]
gsettings-macro = { git = "https://github.com/vhdirk/gsettings-macro.git", branch = "multiple-schemas" }
